[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "createc-to-nanonis-file-conversion"
version = "1.01.0"
description = "CLI tools for converting Createc STM .dat files to Nanonis .sxm format and PNG previews."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "pillow",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
dat-png = "nanonis_tools.dats_to_pngs:main"
dat-sxm = "nanonis_tools.dat_sxm_cli:main"
dat-gui = "nanonis_tools.gui:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["nanonis_tools"]

[tool.pytest.ini_options]
testpaths = ["tests"]
